force-app/main/default/objects/Shipment/fields/Carrier_Provider__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Provider__c</fullName>
    <label>Carrier Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>