force-app/main/default/objects/Shipment/fields/Container_Id__c.field-meta.xml
<CustomField>
    <fullName>Container_Id__c</fullName>
    <label>Container - Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>