force-app/main/default/objects/Shipment/fields/Ship_Method__c.field-meta.xml
<CustomField>
    <fullName>Ship_Method__c</fullName>
    <label>Ship Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>